# xlibs

./: .gitignore  Makefile.am  configure.ac
math/: configure.ac
math/include/: Makefile.am  xmath.h
math/src/: Makefile.am  gcd.c  lcm.S
strings/: configure.ac
strings/include/: Makefile.am  xstrings.h
strings/src/: Makefile.am  edit_distance.c  find_substring.c  string_length.c
