AC_PREREQ([2.69])
AC_INIT([xmath], [1.0], [jflopezfernandez@gmail.com])
AM_INIT_AUTOMAKE([-Wall foreign])
AM_PROG_AR
LT_PREREQ([2.4.6])
LT_INIT

AC_CONFIG_MACRO_DIRS([m4])
#AC_CONFIG_SRCDIR([src/ .c])

# Check for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Define configuration files to generate.
AC_CONFIG_FILES([
    Makefile
    include/Makefile
    src/Makefile
])

# Finish up configuration.
AC_OUTPUT
